# quantumaudio

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  Quantum Audio Module.ipynb  README.md  Wavetables_SuperCollider-Part2.ipynb  Wavetables_SuperCollider_Part1.ipynb  pyproject.toml  quantum_audio_module_tutorial.ipynb  setup.py  tutorial_quantum_audio_module.ipynb
docs/: conf.py  index.rst  license.rst  modules.rst  quantumaudio.rst  requirements.txt  supercollider1.nblink  supercollider2.nblink  tutorial.nblink
docs/_build/doctrees/: environment.pickle  index.doctree  license.doctree  modules.doctree  quantumaudio.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  license.html  modules.html  objects.inv  py-modindex.html  quantumaudio.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/quantumaudio/: quantumaudio.html
docs/_build/html/_sources/: index.rst.txt  license.rst.txt  quantumaudio.rst.txt
examples_with_supercollider/: Wavetables.scd  wavetables_supercollider_part1.ipynb  wavetables_supercollider_part2.ipynb
quantumaudio/: __init__.py  quantumaudio.py  test_quantumaudio.py
