[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "quantumaudio"
authors = [
    {name = "Paulo Vitor Itaboraí", email = "paulo.itaborai@plymouth.ac.uk"},
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.9"
dynamic = ["version", "description"]
dependencies = ['qiskit', 'numpy', 'ipython', 'matplotlib', 'bitstring', 'pylatexenc']
keywords = ["quantum", "qiskit", "quantum computing", "quantum computer music", "audio", "quantum audio"]

[project.urls]
Documentation = "https://quantumaudio.readthedocs.io/en/latest/"
Source = "https://github.com/iccmr-quantum/quantumaudio"
ICCMR_Website = "https://www.plymouth.ac.uk/research/iccmr"

[project.optional-dependencies]
test = ["pytest >=7.2"]
doc = ["sphinx >=5.3", "sphinx-rtd-theme >=1.1"]
dev = ["pytest >=7.2", "flit >=3.2,<4"]
examples = ["cython", "pyliblo>=0.9.1", "supercollider", "librosa"]
